# stream_consumer

./: LICENSE  README.md  pyproject.toml
swift_consumer/kafka/: consumer.py  producer.py
swift_consumer/redis/: consumer.py  producer.py
