[tool.poetry]
name = "stream_consumer"
version = "0.1.0"
description = ""
authors = ["Agalin <6164461+Agalin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kafka-python = "^2.0.1"
redis = "^3.5.3"
hiredis = "^2.0.0"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
